# DSAN-5400-emoji-project

./: README.md  environment.yml  logs.txt  pyproject.toml  setup.py
emoji-book-rec/data/: data_unconfigured.tsv  emoji_keyword_list.tsv
emoji-book-rec/emoji-book-rec/utils/: __init__.py  api_to_tsv.py  create_kw_book_tsv.py  keyword_tsv_to_dict.py  query.py
emoji-book-rec/emoji-book-rec/utils/dormant/: populate_dataset.py
emoji-book-rec/tests/: __init__.py
emoji-book-rec/utils/: api_to_tsv.py
emoji_book_rec/data/: emoji_keyword_list.tsv
emoji_book_rec/emoji_book_rec/utils/: create_kw_book_tsv.py  index.py  keyword_tsv_to_dict.py  query.py
emoji_book_rec/emoji_book_rec/utils/dormant/: api_to_tsv.py  parse_tsv.py  populate_dataset.py
emoji_book_rec/tests/: __init__.py  test_emoji.py
