[project]
name = "Emoji-Book-Recommender"
version = "0.1.0"
description = "Get book recommendations with emoji input"
requires-python = ">=3.10"

dependencies = [
    "boto3==1.35.87",
    "bs4==0.0.2",
    "faiss-cpu==1.9.0",
    "fireducks==1.1.7",
    "ipykernel==6.29.5",
    "jupyter-client==8.6.3",
    "langchain==0.3.13",
    "langchain-aws==0.2.10",
    "langchain-community==0.3.13",
    "langchainhub==0.1.21",
    "langgraph==0.2.72",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "more-itertools==10.2.0",
    "nltk==3.8.1",
    "pip>=24.0",
    "pytest==8.1.1",
    "jupyter==1.0.0",
    "tqdm==4.66.2",
    "transformers==4.40.1",
    "scikit-learn==1.4.2",
    "emoji==2.11.0"
]

